# protopass-cli

./: .gitignore  README.md  cli.py  deroulement.txt  protopass_cli-0.1.0-py3-none-any.whl  pyproject.toml  requirements.txt  test_env.py
client/: cli.py
client/agent/: protopass_agent.py
client/client_data/: account_state.json  session.json
client/core/: account_state.py  auth.py  generator.py  item.py  item_schema.py  simplelogin.py  totp.py  vault.py
client/core/integration/: integrations.py  simplelogin.py
client/core/items/: prompt.py  schemas.py  type.py
client/utils/: agent_client.py  common.py  crypto.py  display.py  logger.py  network.py  server_manager.py
client_data/: session.json
core/: auth.py
data/: session.json  users.json
scripts/: clean.sh  dummy.sh  seed_demo.sh  setup_employee.sh
server/: app.py  session_store.py  user_store.py  vault_store.py
server/server_data/: sessions.json  users.json
server/utils/: logger.py
src/: run_protopass.py
src/client/core/: account_state.py  item_schema.py  vault.py
src/client/core/integration/: integrations.py  simplelogin.py
src/client/utils/: agent_client.py  crypto.py  network.py  server_manager.py
src/server/: app.py  session_store.py  user_store.py  vault_store.py
src/server/utils/: response.py
tests/: conftest.py  helpers.py  test_account_state.py  test_session_store.py
tests/scenarios/: test_auth_flow.py
tests/unit/: test_account_state.py  test_session_store.py
