[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protopass-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "bcrypt",
  "pycryptodome",
  "pyotp",
  "requests",
  "flask",
  "srp",
]

[project.scripts]
protopass = "client.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["client*", "server*"]
